# DotNetVersionize

./: .gitignore  LICENSE  README.md  changelog.md  pyproject.toml
.github/actions/bump_product_version/: bump_version.yml
.github/actions/bump_release_candidate/: bump_release_candidate.yml
.github/actions/create_pull_request/: create_pull_request.yml
.github/actions/generate_release/: generate_release.yml
.github/actions/todo/: csproj_rc_bumper.yml  csproj_version_bumper.yml  split_solutions_branch.yml.disabled
.github/workflows/: ci_installation.yml  normalize_code.yml  run_tests.yml
dotnetversionize/: __main__.py  common_definitions.py  git_interface.py  increment_type.py  product_bumper.py  project_bumper.py  version_number.py
src/: project_bumper.py
src/dotnetversionize/: __main__.py  product_bumper.py
tests/: test_increment_type.py
