[project]
authors = [{name = "Carles S. Soriano Pérez", email = "sorianoperez.carles@gmail.com"}]
dependencies = []
name = "DotNetVersionize"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
dotnetversionize = { path = ".", editable = true }

[tool.pixi.tasks]
